scrollbar fixation for better ui

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 html{
-  background-color:#E6EEF7
+  background-color:#E6EEF7;
+  overflow-y: scroll;
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
